construção do logo html

--- a/index.html
+++ b/index.html
@@ -5,9 +5,15 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Loja De Bolos Da Cida</title>
+    <link rel="shortcut icon" href="imagens/iconvovo.png" type="image/x-icon">
+    <link rel="stylesheet" href="estilos.css">
 </head>
 <body>
-    
+    <header>
+        <img src="imagens/iconvovo.png" alt="Bolos da Cida">
+        <h1>Bolos da Cida</h1>
+
+    </header>
 </body>
 
 </html>
