formatação do cabeçalho

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -8,10 +9,11 @@
     <link rel="shortcut icon" href="imagens/iconvovo.png" type="image/x-icon">
     <link rel="stylesheet" href="estilos.css">
 </head>
+
 <body>
-    <header>
-        <img src="imagens/iconvovo.png" alt="Bolos da Cida">
-        <h1>Bolos da Cida</h1>
+    <header class="cabecalho">
+        <img src="imagens/iconvovo.png" class="logo" alt="Bolos da Cida">
+        <h1 class="nome-loja">Bolos da <br> Cida</h1>
 
     </header>
 </body>
