finalização do cabeçalho

--- a/index.html
+++ b/index.html
@@ -8,14 +8,24 @@
     <title>Loja De Bolos Da Cida</title>
     <link rel="shortcut icon" href="imagens/iconvovo.png" type="image/x-icon">
     <link rel="stylesheet" href="estilos.css">
+
 </head>
 
 <body>
     <header class="cabecalho">
         <img src="imagens/iconvovo.png" class="logo" alt="Bolos da Cida">
-        <h1 class="nome-loja">Bolos da <br> Cida</h1>
+        <h1 class="nome-loja">
+            <small class="texto-piqueno">Bolos da</small>
+            <br>Cida
+        </h1>
 
     </header>
+    <nav class="menu">
+        <a href="index.html"class="item-menu">menu</a>
+        <a href=""class="item-menu">cardapio</a>
+        <a href=""class="item-menu">fotos</a>
+        <a href=""class="item-menu">contatos</a>
+    </nav>
 </body>
 
 </html>
