criação e formatação do menu

--- a/index.html
+++ b/index.html
@@ -21,10 +21,9 @@
 
     </header>
     <nav class="menu">
-        <a href="index.html"class="item-menu">menu</a>
-        <a href=""class="item-menu">cardapio</a>
-        <a href=""class="item-menu">fotos</a>
-        <a href=""class="item-menu">contatos</a>
+        <a href="#"class="item-menu">cardapio</a> -
+        <a href="#"class="item-menu">fotos</a> -
+        <a href="#"class="item-menu">contatos</a >
     </nav>
 </body>
 
