finalização do site do bolos da Cida

--- a/index.html
+++ b/index.html
@@ -59,8 +59,13 @@
     </div>
     <div class="local">
         <h2 class="contatos">contatos </h2>
-        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3679.8417864964053!2d-47.33952628499624!3d-22.734121237448147!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x2d37ddcf1d3a3230!2zMjLCsDQ0JzAyLjkiUyA0N8KwMjAnMTQuNCJX!5e0!3m2!1spt-BR!2sbr!4v1638407381127!5m2!1spt-BR!2sbr" width="400" height="300" style="border: 10px double #fb6066 ;" allowfullscreen="" loading="lazy">
-            
+        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3679.8417864964053!2d-47.33952628499624!3d-22.734121237448147!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x2d37ddcf1d3a3230!2zMjLCsDQ0JzAyLjkiUyA0N8KwMjAnMTQuNCJX!5e0!3m2!1spt-BR!2sbr!4v1638407381127!5m2!1spt-BR!2sbr" width="400" height="300" style="border: 10px double #fb6066 ;" allowfullscreen="" loading="lazy"></iframe>
+        <hr>
+
+        <h2 class="rodape"> bolos da Cida </h2>
+        <img class="midias" src="imagens/whasppvovo.png" alt="whatspp da cida">
+        <img class="midias" src="imagens/intavovo.png"  alt="instagram da cida">
+        <img class="midias" src="imagens/facevovo.png" alt="facebook da cida">
     </div>
     
 </body>
