--- a/index.html
+++ b/index.html
@@ -21,15 +21,15 @@
 
     </header>
     <nav class="menu">
-        <a href="#"class="item-menu">cardapio</a> -
-        <a href="#"class="item-menu">fotos</a> -
-        <a href="#"class="item-menu">contatos</a >
+        <a href="#cardápio"class="item-menu">cardápio</a> -
+        <a href="#fotos"class="item-menu">fotos</a> -
+        <a href="#contatos"class="item-menu">contatos</a >
     </nav>
     <div class="banner">
         <img src="imagens/banner.jpg" alt="bolo de unicornio" class="foto-banner">
     </div>
-    <div class="bolos" >
-        <h2 class="cardapio">cardapio</h2>
+    <div class="bolos" id=cardápio>
+        <h2 class="cardapio">cardápio</h2>
         <ul class="texto-colunas">
             <li>Bolo de morango R$19,90</li> 
             <li>Bolo de chocolate R$25,00</li> 
@@ -50,14 +50,14 @@
            
         </ul>
     </div>
-    <div class="galeria" > 
+    <div class="galeria" id="fotos" > 
         <h2 class="fotos-titulo"> fotos </h2>
         <img class="fotos-img" src="imagens/foto-1.jpg" alt="bolo de corrida">
         <img class="fotos-img" src="imagens/foto-2.jpg" alt="bolo de chocolate"> 
         <img class="fotos-img" src="imagens/foto-3.jpg" alt=" bolo de casamento simples">
 
     </div>
-    <div class="local">
+    <div class="local" id="contatos">
         <h2 class="contatos">contatos </h2>
         <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3679.8417864964053!2d-47.33952628499624!3d-22.734121237448147!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x2d37ddcf1d3a3230!2zMjLCsDQ0JzAyLjkiUyA0N8KwMjAnMTQuNCJX!5e0!3m2!1spt-BR!2sbr!4v1638407381127!5m2!1spt-BR!2sbr" width="400" height="300" style="border: 10px double #fb6066 ;" allowfullscreen="" loading="lazy"></iframe>
         <hr>
